@@ -60,6 +60,7 @@ S3method(boxcox, lm)
 S3method(coef, fitdistr)
 S3method(coef, lda)
 S3method(coef, loglm)
+S3method(coef, ridgelm)
 S3method(confint, glm)
 S3method(confint, nls)
 S3method(confint, polr)
