@@ -21,7 +21,7 @@ lvqinit <- function(x, cl, size, prior, k=5)
     inside <- knn.cv(x, cl, k) == cl
     selected <- numeric(0)
     for(i in 1:np){
-        set <- seq(along=g)[unclass(g)==i & inside]
+        set <- seq_along(g)[unclass(g)==i & inside]
         if(length(set) > 1)
             set <- sample(set, min(length(set), round(size*prior[i])))
         selected <- c(selected, set)
