@@ -145,7 +145,7 @@ trmat <- function (obj, xl, xu, yl, yu, n)
     x <- seq(xl, xu, dx)
     y <- seq(yl, yu, dy)
     z <- matrix(nrow = length(x), ncol = length(y))
-    for (i in seq(along = y))
+    for (i in seq_along(y))
         z[, i] <- predict(obj, x, rep(y[i], length(x)))
     invisible(list(x = x, y = y, z = z))
 }
@@ -165,7 +165,7 @@ trmat <- function(obj, xl, xu, yl, yu, n)
     x <- seq(xl, xu, dx)
     y <- seq(yl, yu, dy)
     z <- matrix(nrow = length(x), ncol = length(y))
-    for(i in seq(along = y))
+    for(i in seq_along(y))
         z[, i] <- .trval(obj, x, rep(y[i], length(x)))
     invisible(list(x = x, y = y, z = z))
 }
@@ -210,7 +210,7 @@ prmat <- function(obj, xl, xu, yl, yu, n)
     xs <- seq(xl, xu, dx)
     ys <- seq(yl, yu, dy)
     z <- matrix(nrow = length(xs), ncol = length(ys))
-    for(i in seq(along = ys))
+    for(i in seq_along(ys))
         z[, i] <- .trval(obj, xs, rep(ys[i], length(xs))) +
             predval(obj, xs, rep(ys[i], length(xs)))
     invisible(list(x = xs, y = ys, z = z))
@@ -263,7 +263,7 @@ semat <- function(obj, xl, xu, yl, yu, n, se)
     npar <- ((np + 1) * (np + 2))/2
     if(missing(se))
         se <- sqrt(sum(obj$W^2)/(length(obj$x) - npar))
-    for(i in seq(along = ys))
+    for(i in seq_along(ys))
         z[, i] <- se * sqrt(seval(obj, xs, rep(ys[i], length(xs))))
     invisible(list(x = xs, y = ys, z = z))
 }
